--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -1,8 +1,76 @@
 \chapter{Opis projektnog zadatka}
 		
-		\textbf{\textit{dio 1. revizije}}\\
-		
-		\textit{Na osnovi projektnog zadatka detaljno opisati korisničke zahtjeve. Što jasnije opisati cilj projektnog zadatka, razraditi problematiku zadatka, dodati nove aspekte problema i potencijalnih rješenja. Očekuje se minimalno 3, a poželjno 4-5 stranica opisa.	Teme koje treba dodatno razraditi u ovom poglavlju su:}
+	Cilj ovog projekta je razviti programsku podršku za web aplikaciju "Wild Track".
+	Ta aplikacija olakšava korisniku pronalazak i praćenje divljih životinja.
+	Prilikom otvaranja aplikacije prikazuje se karta koja pokazuje gdje se nalazi koja životinja.
+	Praćene životinje imaju na sebi gps uređaj koji aplikaciji odašilje njihovu poziciju i tako korisnik može cijelo vrijeme znati njihovu točnu lokaciju.
+	Kad korisnik odabere koju životinju želi pratiti, može vidjeti neke podatke o njoj, kao na primjer povijesne podatke gdje se nalazila, naziv vrste, slika i opis.
+	
+	Neregistrirani korisnik je ograničen samo s dosad nabrojanim akcijama, ako želi nešto više s aplikacijom omogućeno mu je prijavljivanje u sustav s postojećim računom 
+	(potrebno je upisati korisničko ime i lozinku) ili kreiranjem novog računa. Za kreiranje novog računa potrebni su sljedeći podaci: 
+	\begin{packed_item}
+		\item uloga za koju se prijavljuje - može biti istraživač, voditelj postaje ili tragač na terenu
+		\item korisničko ime 
+		\item fotografija
+		\item lozinka
+		\item ime
+		\item prezime
+		\item email adresa
+	\end{packed_item}
+
+	Registracijom u sustav korisniku se dodjeljuju prava istraživača, voditelja postaje, tragača na terenu ili administratora.
+	Registrirani korisnik može, uz opcije koje ima njegova željena uloga, još i pregledati, mijenjati osobne podatke te izbrisati svoj korisnički račun.
+
+	Registracija je završena kad korisnik preko svoje email adrese potvrdi, osim ako je korisnik izabrao biti istraživač ili voditelj postaje. 
+	U tom slučaju, administrator mora potvrditi njihovu ulogu. 
+	Administrator sustava ima najveće ovlasti. 
+	On ima ovlasti da vidi popis svih registriranih korisnika i njihovih osobnih podataka, odnosno pristup bazi s popisom registriranih korisnika, te može mijenjati njihova dodijeljena prava i osobne podatke.
+	
+	Voditelj postaje može izabrati koji će tragači biti dio njegove postaje i bira na koji način će oni izvoditi pretraživanje životinja. 
+	Postaje su određena mjesta na karti koja voditelj postaje bira, to na primjer može biti postaja Biokovo ili postaja Lonjsko polje.
+
+	Ako se korisnik prijavi kao tragač, njemu se na karti prikazuju zadaci koje mora obaviti, trenutna pozicija ostalih tragača koji su aktivni na istoj akciji, te trenutna pozicija životinja koje prate.
+	Tragač tijekom svoje akcije može ostavljati komentare o životinji koju je pratio te također može ostaviti komentar ostalim tragačima i istraživačima, to jest drugim sudionicima u akciji.
+	Također, cijeli put koji tragači prođu se bilježi, odnosno označavaju se staze kojima su putovali i način kojim su se kretali. To će biti potrebno istraživačima koji vizualiziraju njihovo kretanje u obliku toplinskih karata te potom to koriste za analiziranje kretanja životinja i njihovih omiljenih staništa.
+	
+	Načini kojima se tragači kreću mogu biti različiti, kao na primjer:
+	\begin{packed_item}
+		\item pješke
+		\item dronom
+		\item automobilom
+		\item cross motorom
+		\item brodom
+		\item helikopterom
+	\end{packed_item}
+
+	Ovisno o tome kojom je tragač metodom osposobljen za obavljanje zadataka, svaka metoda je drugačije prikazana na karti.
+	Svaka metoda pruža različitu vidljivost i područje pokrivanja te se na prikladne načine prikazuje na kartama. 
+	Ako je tragač odabran da ide pješke njegova će karta biti detaljnija i prikazana na manjem prostoru nego karta tragača koji putuje helikopterom. 
+	Tragači koji obavljaju zadatak s pomoću drona, helikoptera ili plovila, moraju na karti imati pravocrtnu rutu.
+	Svaki tragač je osposobljen za samo jednu vozilo i tijekom te akcije se njegov tip prijevoza ne mijenja.
+
+	Ako je korisnik odlučio biti istraživač, on može stvoriti nove akcije pretraživanja i praćenja životinja s detaljima o određenim vrstama, jedinkama ili staništima za proučavanje.
+	Svaki istraživač je zadužen za jednu akciju.
+	Ako je istraživaču potreban tragač za pomoć pri istraživanju, istraživač može poslati voditelju postaje zahtjev za tragačima s opisom o potrebnim kvalifikacijama.
+	Voditelj će na taj zahtjev odabrati tragače koji odgovaraju opisu i postaviti ih da sudjeluju u toj akciji.
+	Tragač će biti gotov s akcijom kad završi sve potrebne zadatke.
+	Istraživač, kad dobije određene tragače, zadaje preko karte zadatke pojedinačno svakom tragaču.
+	Zadaci mogu biti različiti, kao na primjer prolazak određenom rutom i dolazak do određene lokacije te postavljanje kamere ili uređaja za praćenje.
+	Prilikom postavljanja zadatka, istraživač može i ostaviti neke dodatne komentare tragačima.
+	Informacije o poziciji životinje, tragaču i postaji se istraživaču prikazuju preko interaktivne karte.
+	Istraživač može birati da se tijekom izrade karte koriste i neke određene informacije. Na primjer:
+	\begin{packed_item}
+		\item povijesne pozicije praćenih životinja
+		\item filtriranje životinja po vrsti ili pojedinačno po jedinki
+		\item trenutne pozicije praćenih životinja
+		\item povijesne pozicije svih tragača na nekoj akciji
+		\item filtriranje po tipu prijevoza ili pojedinačno po tragaču
+		\item trenutne pozicije tragača koji su aktivni na akciji
+	\end{packed_item}
+
+
+	
+
 		\begin{packed_item}
 			\item \textit{potencijalna korist ovog projekta}
 			\item \textit{postojeća slična rješenja (istražiti i ukratko opisati razlike u odnosu na zadani zadatak). Dodajte slike koja predočavaju slična rješenja.}
@@ -12,104 +80,5 @@
 			\item \textit{moguće nadogradnje projektnog zadatka}
 		\end{packed_item}
 		
-		\textit{Za pomoć pogledati reference navedene u poglavlju „Popis literature“, a po potrebi konzultirati sadržaj na internetu koji nudi dobre smjernice u tom pogledu.}
-		\eject
-		
-		\section{Primjeri u \LaTeX u}
-		
-		\textit{Ovo potpoglavlje izbrisati.}\\
 
-		U nastavku se nalaze različiti primjeri kako koristiti osnovne funkcionalnosti \LaTeX a koje su potrebne za izradu dokumentacije. Za dodatnu pomoć obratiti se asistentu na projektu ili potražiti upute na sljedećim web sjedištima:
-		\begin{itemize}
-			\item Upute za izradu diplomskog rada u \LaTeX u - \url{https://www.fer.unizg.hr/_download/repository/LaTeX-upute.pdf}
-			\item \LaTeX\ projekt - \url{https://www.latex-project.org/help/}
-			\item StackExchange za Tex - \url{https://tex.stackexchange.com/}\\
-		
-		\end{itemize} 	
-
-
-		
-		\noindent \underbar{podcrtani tekst}, \textbf{podebljani tekst}, 	\textit{nagnuti tekst}\\
-		\noindent \normalsize primjer \large primjer \Large primjer \LARGE {primjer} \huge {primjer} \Huge primjer \normalsize
-				
-		\begin{packed_item}
-			
-			\item  primjer
-			\item  primjer
-			\item  primjer
-			\item[] \begin{packed_enum}
-				\item primjer
-				\item[] \begin{packed_enum}
-					\item[1.a] primjer
-					\item[b] primjer
-				\end{packed_enum}
-				\item primjer
-			\end{packed_enum}
-			
-		\end{packed_item}
-		
-		\noindent primjer url-a: \url{https://www.fer.unizg.hr/predmet/proinz/projekt}
-		
-		\noindent posebni znakovi: \# \$ \% \& \{ \} \_ 
-		$|$ $<$ $>$ 
-		\^{} 
-		\~{} 
-		$\backslash$ 
-		
-		
-		\begin{longtblr}[
-			label=none,
-			entry=none
-			]{
-				width = \textwidth,
-				colspec={|X[8,l]|X[8, l]|X[16, l]|}, 
-				rowhead = 1,
-			} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
-			\hline \SetCell[c=3]{c}{\textbf{naslov unutar tablice}}	 \\ \hline[3pt]
-			\SetCell{LightGreen}IDKorisnik & INT	&  	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  	\\ \hline
-			korisnickoIme	& VARCHAR &   	\\ \hline 
-			email & VARCHAR &   \\ \hline 
-			ime & VARCHAR	&  		\\ \hline 
-			\SetCell{LightBlue} primjer	& VARCHAR &   	\\ \hline 
-		\end{longtblr}
-		
-
-		\begin{longtblr}[
-				caption = {Naslov s referencom izvan tablice},
-				entry = {Short Caption},
-			]{
-				width = \textwidth, 
-				colspec = {|X[8,l]|X[8,l]|X[16,l]|}, 
-				rowhead = 1,
-			}
-			\hline
-			\SetCell{LightGreen}IDKorisnik & INT	&  	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  	\\ \hline
-			korisnickoIme	& VARCHAR &   	\\ \hline 
-			email & VARCHAR &   \\ \hline 
-			ime & VARCHAR	&  		\\ \hline 
-			\SetCell{LightBlue} primjer	& VARCHAR &   	\\ \hline 
-		\end{longtblr}
-	
-
-
-		
-		
-		%unos slike
-		\begin{figure}[H]
-			\includegraphics[scale=0.4]{slike/aktivnost.PNG} %veličina slike u odnosu na originalnu datoteku i pozicija slike
-			\centering
-			\caption{Primjer slike s potpisom}
-			\label{fig:promjene}
-		\end{figure}
-		
-		\begin{figure}[H]
-			\includegraphics[width=\textwidth]{slike/aktivnost.PNG} %veličina u odnosu na širinu linije
-			\caption{Primjer slike s potpisom 2}
-			\label{fig:promjene2} %label mora biti drugaciji za svaku sliku
-		\end{figure}
-		
-		Referenciranje slike \ref{fig:promjene2} u tekstu.
-		
-		\eject
-		
 	
