--- a/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
+++ b/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
@@ -74,8 +74,8 @@
 
 \pagestyle{fancy}
 \lhead{Programsko inženjerstvo}
-\rhead{$<$Projektni zadatak$>$}
-\lfoot{$<$Naziv grupe$>$}
+\rhead{Wild Track}
+\lfoot{Aristos}
 \cfoot{stranica \thepage/\pageref{LastPage}}
 \rfoot{\today}
 \renewcommand{\headrulewidth}{0.2pt}
@@ -90,21 +90,21 @@
 		\begin{center}
 			\vspace*{\stretch{1.0}} %u kombinaciji s ostalim \vspace naredbama definira razmak između redaka teksta
 			\LARGE Programsko inženjerstvo\\
-			\large Ak. god. 2020./2021.\\
+			\large Ak. god. 2023./2024.\\
 			
 			\vspace*{\stretch{3.0}}
 			
-			\huge $<$Naziv projekta$>$\\
-			\Large Dokumentacija, Rev. \textit{$<$1 ili 2$>$}\\
+			\huge Wild Track\\
+			\Large Dokumentacija, Rev. 1.\\
 			
 			\vspace*{\stretch{12.0}}
 			\normalsize
-			Grupa: \textit{$<$Naziv grupe$>$}\\
-			Voditelj: \textit{$<$Ime i prezime voditelja$>$}\\
+			Grupa: \textit{Aristos}\\
+			Voditelj: \textit{Josipa Udovičić}\\
 			
 			
 			\vspace*{\stretch{1.0}}
-			Datum predaje: \textit{$<$dan$>$. $<$mjesec$>$. $<$godina$>$.}\\
+			Datum predaje: \textit{17. studenog 2023.}\\
 	
 			\vspace*{\stretch{4.0}}
 			
