--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -2,20 +2,13 @@
 		
 	\section{Funkcionalni zahtjevi}
 			
-			\textbf{\textit{dio 1. revizije}}\\
-			
-			\textit{Navesti \textbf{dionike} koji imaju \textbf{interes u ovom sustavu} ili  \textbf{su nositelji odgovornosti}. To su prije svega korisnici, ali i administratori sustava, naručitelji, razvojni tim.}\\
-				
-			\textit{Navesti \textbf{aktore} koji izravno \textbf{koriste} ili \textbf{komuniciraju sa sustavom}. Oni mogu imati inicijatorsku ulogu, tj. započinju određene procese u sustavu ili samo sudioničku ulogu, tj. obavljaju određeni posao. Za svakog aktora navesti funkcionalne zahtjeve koji se na njega odnose.}\\
-			
-			
 			\noindent \textbf{Dionici:}
 			
 			\begin{packed_enum}
-				
-				\item Dionik 1
-				\item Dionik 2				
-				\item ...
+				\item Tragač na terenu
+				\item Istraživač				
+				\item Voditelj postaje
+				\item Administrator
 				
 			\end{packed_enum}
 			
@@ -23,30 +16,74 @@
 			
 			
 			\begin{packed_enum}
-				\item  \underbar{Aktor 1 (inicijator) može:}
+				\item  \underbar{Neregistrirani/neprijavljeni korisnik  (inicijator) može:}
 				
 				\begin{packed_enum}
-					
-					\item funkcionalnost 1
-					\item funkcionalnost 2
-					\begin{packed_enum}
-						
-						\item  podfunkcionalnost 1 
-						\item  podfunkcionalnost 2
-				
+					\item vidjeti kartu i pozicije životinja
+					\item vidjeti neke informacije o životinjama(povijesni podaci gdje se nalazila, naziv vrste, slika i opis)
+					\item se registrirati u sustav
+					\item \begin{packed_enum}
+						\item  dati svoje podatke: korisničko ime, fotografija, lozinka, ime, prezime i email adresa
+						\item  odabrati svoju ulogu(tragač, istraživač ili voditelj postaje)
+						\item potvrditi registraciju na svojoj email adresi 
 					\end{packed_enum}
-					\item  funkcionalnost 3
-					
+					\item se prijaviti u sustav
 				\end{packed_enum}
 			
-				\item  \underbar{Aktor 2 (sudionik) može:}
+				\item  \underbar{Tragač na terenu (inicijator) može:}
 				
 				\begin{packed_enum}
 					
-					\item funkcionalnost 1
-					\item funkcionalnost 2
+					\item vidjeti kartu i pozicije životinja
+					\item vidjeti na karti gdje se nalaze ostali tragači aktivni na istoj akciji
+					\item vidjeti neke informacije o životinjama(povijesni podaci gdje se nalazila, naziv vrste, slika i opis)
+					\item ostavljati komentare o praćenim životinjama
+					\item ostavljati komentare drugim tragačima i istraživačima koji su na istoj akciji
+					\item obavljati zadane zadatke
+					\item \begin{packed_enum}
+						\item može ići određenim prijevozom (pješke, dronom, automobilom, cross motorom, brodom ili helikopterom)
+						\item može se maknuti s akcije završetkom svih potrebnih zadataka
+					\end{packed_enum}
 					
 				\end{packed_enum}
+
+				\item  \underbar{Istraživač (inicijator) može:}
+				
+				\begin{packed_enum}
+					\item vidjeti, u obliku toplinske karte, staze kojima su se tragači kretali i načinima kojima su se kretali
+					\item stvoriti novu akciju pretraživanja i praćenja
+					\item poslati zahtjev voditelju postaje za tragačima za svoju akciju
+					\item preko karte zadati zadatke tragačima
+					\item ostavljati dodatne komentare
+					\item preko interaktivne karte pratiti informacije o životinjama, tragačima i postajama
+					\item izabrati koje će se informacije koristiti pri izradi karte
+				\end{packed_enum}
+
+				\item  \underbar{Voditelj postaje (inicijator) može:}
+				
+				\begin{packed_enum}
+					\item birati tragače za svoju postaju
+					\item definira na koji način će se izvoditi pretraživanje
+					\item birati tragače koje će dodjeliti istraživaču
+				\end{packed_enum}
+
+				\item  \underbar{Administrator (inicijator) može:}
+				
+				\begin{packed_enum}
+					\item vidjeti popis svih registriranih korisnika i njihovih osobnih podataka
+					\item mijenjati dodijeljena prava i osobne podatke registriranim korisnicima
+					\item potvrditi istraživača i voditelja postaje
+				\end{packed_enum}
+
+				\item  \underbar{Baza podataka (sudionik):}
+				
+				\begin{packed_enum}
+					\item pohranjuje sve podatke o korisnicima 
+					\item pohranjuje sve podatke o životinjama
+					\item pohranjuje staze kojima tragači putuju(i način kojim su se kretali)
+				\end{packed_enum}
+
+
 			\end{packed_enum}
 			
 			\eject 
@@ -54,9 +91,7 @@
 			
 				
 			\subsection{Obrasci uporabe}
-				
-				\textbf{\textit{dio 1. revizije}}
-				
+								
 				\subsubsection{Opis obrazaca uporabe}
 					\textit{Funkcionalne zahtjeve razraditi u obliku obrazaca uporabe. Svaki obrazac je potrebno razraditi prema donjem predlošku. Ukoliko u nekom koraku može doći do odstupanja, potrebno je to odstupanje opisati i po mogućnosti ponuditi rješenje kojim bi se tijek obrasca vratio na osnovni tijek.}\\
 					
