promijenjen opis i funkcionalni zahtjevi

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -12,6 +12,9 @@
 			\textbf{Rev.}	& \textbf{Opis promjene/dodatka} & \textbf{Autori} & \textbf{Datum}\\[3pt] \hline
 			0.1 & Napravljen predložak.	& Franjo Vuković & 04.11.2023. 		\\[3pt] \hline 
 			0.2	& Dodani opis projektnog zadatka i \newline funkcionalni zahtjevi. & Josipa Udovičić & 04.11.2023. 	\\[3pt] \hline 
+			0.2.1 & Promijenjen opis i funkcionalni zahtjevi. & Josipa Udovičić & 05.11.2023.  \\[3pt] \hline 
+			0.3 & Dodan dio opisa obrazaca uporabe. & Stela Troskot & 05.11.2023. \\[3pt] \hline 
+			0.4 & Dodani dijagrami obrazaca uporabe. & Franjo Vuković, Marko Kukolj, Marko Pongrac & 05.11.2023. \\[3pt] \hline 
 			
 		\end{longtblr}
 	
