--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -71,14 +71,43 @@
 
 	
 
-		\begin{packed_item}
-			\item \textit{potencijalna korist ovog projekta}
-			\item \textit{postojeća slična rješenja (istražiti i ukratko opisati razlike u odnosu na zadani zadatak). Dodajte slike koja predočavaju slična rješenja.}
-			\item \textit{skup korisnika koji bi mogao biti zainteresiran za ostvareno rješenje.}
-			\item \textit{mogućnost prilagodbe rješenja }
-			\item \textit{opseg projektnog zadatka}
-			\item \textit{moguće nadogradnje projektnog zadatka}
-		\end{packed_item}
-		
+	Ovaj projekt može biti korisan svima koji bi htjeli više naučiti o divljim životinjama, ali isto tako i ljudima koji se bave proučavanjem životinja može olakšati posao.
+	Svaka osoba koja želi može se ulogirati i postati tragač, u svrhu zabave, dodatnog znanja... A time, dok ljudi to rade iz zabave, odnosno svojevoljno, osobe koji su istraživači 
+	mogu koristiti njihove informacije i time im se smanjuje dio posla.
+
+	Slične aplikacije poput aplikacije "Wild Track" na području Hrvatske ne postoje. Neke aplikacije koje se bave divljim životinjama su: "eWildLife" i "Divlje životinje".
+
+	"eWildLife" je aplikacija razvijena u realnom vremenu, ljudi prate i izvještavaju o ubijanju divljih životinja, 
+	sukobe čovjek-životinja i viđenja divljih životinja, također mogu i spasiti delfine. 
+
+	"Divlje životinje" (Slika \ref{fig:divlje_zivotinje}) je Android aplikacija koja omogućuje istraživanje svijeta životinja. 
+	Aplikacija nudi opsežan katalog divljih životinja, uključujući šumske životinje, životinje iz zooloških vrtova, cirkuske životinje, afričke životinje, šumske životinje itd. 
+	Aplikacija pruža detaljan opis svake životinje, uključujući njezinu vrstu, veličinu, kao i podatke o ponašanju i navikama. 
+	Također možete pristupiti raznim slikama koje će vam pomoći da bolje razumijete životinje. 
+
+	\begin{figure}[H]
+		\includegraphics[scale=0.4]{slike/divlje_zivotinje.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+		\centering
+		\caption{Aplikacija Divlje Životinje}
+		\label{fig:divlje_zivotinje}
+	\end{figure}
+
+	No, slična aplikacija "Wild Track" aplikaciji izvan Hrvatske postoji. Zove se "Animal Tracker" (Slika \ref{fig:animal_tracker}). 
+	S pomoću "Animal Tracker" aplikacije moguće je pratiti kretanje divljih životinja diljem svijeta koje se prate u gotovo stvarnom vremenu.
+	Kretanja se prikupljaju GPS oznakama koje životinje nose i pohranjuju se u Movebank (internetska infrastruktura koju koriste istraživači za upravljanje, dijeljenje, analizu i arhiviranje podataka o kretanju životinja).
+
+
+	\begin{figure}[H]
+		\includegraphics[scale=0.4]{slike/animal_tracker.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+		\centering
+		\caption{Aplikacija Animal Tracker}
+		\label{fig:animal_tracker}
+	\end{figure}
+	
+
+	Poboljšanja na aplikacijama se uvijek mogu napraviti, pa tako može i na ovoj. Na primjer, moguće je pratiti otkucaje srca životinja, disanje\dots 
+	Time je moguće određivati zdravlje životinje, kretnje životinje, da li životinja spava ili je budna\dots
+	Tu smo dobili nove komponente aplikacije koje se mogu nazvati trenutne aktivnosti životinje i zdravlje životinje te tu tragači i istraživači imaju još više informacija o životinjama, a ne samo one općenite.
+	Isto tako možemo dodati tragačima opciju da slikaju i snimaju životinje te im dati mogućnost da slike i videe objavljuju na aplikaciju. Time je opet doživljaj određene životinje bolji, a ne općenit.
 
 	
