--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -14,7 +14,16 @@
 			0.2	& Dodani opis projektnog zadatka i \newline funkcionalni zahtjevi. & Josipa Udovičić & 04.11.2023. 	\\[3pt] \hline 
 			0.2.1 & Promijenjen opis i funkcionalni zahtjevi. & Josipa Udovičić & 05.11.2023.  \\[3pt] \hline 
 			0.3 & Dodan dio opisa obrazaca uporabe. & Stela Troskot & 05.11.2023. \\[3pt] \hline 
+			0.3.1 & Dodani svi opisi obrazaca uporabe. & Stela Troskot, Domagoj Jurič & 05.11.2023.  \\[3pt] \hline 
 			0.4 & Dodani dijagrami obrazaca uporabe. & Franjo Vuković, Marko Kukolj, Marko Pongrac & 05.11.2023. \\[3pt] \hline 
+			0.5 & Dodani sekvencijski dijagrami. & Franjo Vuković, Marko Kukolj, Marko Pongrac & 08.11.2023.  \\[3pt] \hline 
+			0.5.1 & Promijenjeni dijagrami obrazaca uporabe i sekvencijski dijagrami. & Stela Troskot, Domagoj Jurič & 09.11.2023. \\[3pt] \hline  
+			0.5.2 & Dodan opis sekvencijskih dijagrama. & Marko Kukolj & 09.11.2023.  \\[3pt] \hline 
+			0.5.3 & Dodani ostali zahtjevi. & Josipa Udovičić & 09.11.2023.   \\[3pt] \hline
+			0.6 & Dodan opis arhitekture. & Josipa Udovičić & 09.11.2023.  \\[3pt] \hline 
+			0.7 & Napravljena baza podataka. & Franjo Vuković, Marko Pongrac & 09.11.2023.  \\[3pt] \hline 
+			0.7.1 & Napravljen dijagram baze podataka. & Franjo Vuković, Marko Pongrac & 09.11.2023.  \\[3pt] \hline 
+
 			
 		\end{longtblr}
 	
